[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Ranged_weapon.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Ranged/Bow.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Ranged/PowerBow.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Ranged/Crossbow.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Ranged/RapidCrossbow.png" type="Texture" id=5]

[node name="Ranged_weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Bow" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="PowerBow" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Crossbow" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="RapidCrossbow" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
